--- a/app/views/admin/perks/show.html.haml
+++ b/app/views/admin/perks/show.html.haml
@@ -1,7 +1,7 @@
 .c-admin-page
   .lg-container
     %h1.text-h1.mb-16 Perk #{@partner.name}##{@perk.id}
-    %div{ class: 'max-w-[443px]' }= render ViewComponents::Perk.new(@perk)
+    %div{ class: 'max-w-[443px]' }= render ViewComponents::Partner::Perk.new(@perk)
     %hr.my-32.border-borderColor5
 
     .text-h6.mb-8 Status: #{@perk.status.titleize}
