--- a/app/views/components/advert.html.haml
+++ b/app/views/components/advert.html.haml
@@ -1,4 +1,4 @@
-= link_to "#", class: 'w-[240px] bg-backgroundColorA border-1 border-borderColor5 py-8 px-12 rounded-8 text-center flex flex-col items-center leading-130 text-14 shadow-sm hover:shadow-smZ1' do
+= link_to redirect_advert_path(advert, impression_uuid: uuid), class: 'w-[240px] bg-backgroundColorA border-1 border-borderColor5 py-8 px-12 rounded-8 text-center flex flex-col items-center leading-130 text-14 shadow-sm hover:shadow-smZ1' do
   .font-semibold.mb-4.text-13 Exercism is supported by
   = image_tag advert.logo.presence || advert.partner.logo, class: 'h-[22px] mb-12'
   .text-14
