Add more to perks pages

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -250,6 +250,7 @@
 @import "./pages/challenges/external";
 @import "./pages/challenges/12in23";
 @import "./pages/perks";
+@import "./pages/perk";
 
 /* @import "./highlighters/highlightjs-light";
 @import "./highlighters/highlightjs-dark"; */
