--- a/app/views/components/perk.html.haml
+++ b/app/views/components/perk.html.haml
@@ -1,7 +1,8 @@
 .c-perk
-  = image_tag perk.logo.presence || perk.partner.logo, alt: "Logo of #{perk.partner.name}", class: 'logo'
-  %p.about= perk.about_text
-  .details= raw perk.offer_html
+  = image_tag url_for(perk.light_logo.presence || perk.partner.light_logo), alt: "Logo of #{perk.partner.name}", class: 'logo logo-light'
+  = image_tag url_for(perk.dark_logo.presence || perk.partner.dark_logo), alt: "Logo of #{perk.partner.name}", class: 'logo logo-dark'
+  %p.about= perk.preview_text
+  .details= raw offer_html
   .flex.gap-12
-    = link_to perk.button_text, redirect_perk_path(perk), class: 'btn-m btn-primary'
-    = link_to "Learn more", "#", class: 'btn-m btn-enhanced'
+    = link_to button_text, claim_perk_path(perk), class: 'btn-m btn-primary'
+    = link_to "Learn more", perk_path(perk), class: 'btn-m btn-enhanced'
