--- a/app/views/perks/index.html.haml
+++ b/app/views/perks/index.html.haml
@@ -3,17 +3,16 @@
     .lg-container.flex.mt-24.mb-24
       .content{ class: "max-w-[820px]" }
         = graphical_icon "contributing-header", css_class: 'w-[64px] h-[64px] mb-16'
-        %h1.text-h1.mb-12 Exercism Perks: Offers from our Partners
+        %h1.text-h1.mb-12 Exercism Perks
         %p.text-p-large.mb-16
-          As part of supporting Exercism's mission for equal access to education, organisations provide offers and perks to support our community. Explore and enjoy them below!
-        %p.text-p-large
+          Get discounts and free trials from the organisations that support Exercism's mission for equal access to education and opportunity.
           = link_to "Upgrade to Premium", premium_path, class: 'font-semibold text-linkColor'
-          for even better Perks.
-      = graphical_icon "contributing-header", css_class: "w-[280px] h-[280px] ml-auto hidden md:block", category: :graphics
+          for enhanced Perks.
+      = graphical_icon "contributing-header", css_class: "w-[220px] h-[220px] ml-auto hidden md:block", category: :graphics
       .decorations
 
   .lg-container.mt-24.mb-24
-    .grid.grid-cols-3.gap-24
+    .grid.grid-cols-1.md:grid-cols-2.xl:grid-cols-3.gap-24
       - @perks.each do |perk|
         = render ViewComponents::Partner::Perk.new(perk)
 
