--- a/app/css/pages/contributing-tasks.css
+++ b/app/css/pages/contributing-tasks.css
@@ -124,6 +124,8 @@
     & .tasks {
         @apply shadow-lg rounded-8 bg-backgroundColorA;
         & .task {
+            overflow-wrap: anywhere;
+            hyphens: auto;
             @apply py-10 px-16 sm:px-24;
 
             @apply items-center;
@@ -210,6 +212,12 @@
                 width: 16px;
                 filter: var(--textColor6-filter);
                 @apply ml-140;
+            }
+        }
+        @screen sm {
+            .task {
+                overflow-wrap: initial;
+                hyphens: initial;
             }
         }
     }
