--- a/app/views/components/perk.html.haml
+++ b/app/views/components/perk.html.haml
@@ -2,7 +2,14 @@
   = image_tag url_for(perk.light_logo.presence || perk.partner.light_logo), alt: "Logo of #{perk.partner.name}", class: 'logo logo-light'
   = image_tag url_for(perk.dark_logo.presence || perk.partner.dark_logo), alt: "Logo of #{perk.partner.name}", class: 'logo logo-dark'
   %p.about= perk.preview_text
-  .details= raw offer_html
+  .details= raw offer_summary_html
   .flex.gap-12
-    = link_to button_text, claim_perk_path(perk), class: 'btn-m btn-primary'
+    - if perk.voucher_code?
+      / ARON
+      / Render a button here that opens a modal that looks
+      / the same as what you get if you comment out the line below
+      = link_to button_text, "#", class: 'btn-m btn-primary'
+      /= render ReactComponents::Common::Modal.new('claim_modal', perk: perk, partner: perk.partner)
+    - else
+      = link_to button_text, claim_perk_path(perk), class: 'btn-m btn-primary', data: { turbo: false }
     = link_to "Learn more", perk_path(perk), class: 'btn-m btn-enhanced'
