--- a/app/views/perks/show.html.haml
+++ b/app/views/perks/show.html.haml
@@ -1,35 +1,37 @@
 #page-perk
-  %header.pb-20
+  %header.pt-20.pb-24
     .lg-container
-      = link_to perks_path, class: "c-prominent-link mt-20 mb-24" do
+      = link_to perks_path, class: "c-prominent-link mb-24" do
         = graphical_icon "arrow-left"
         %span See all Exercism Perks
 
       = image_tag @partner.light_logo, alt: "Logo of #{@partner.name}", class: 'logo logo-light'
       = image_tag @partner.dark_logo, alt: "Logo of #{@partner.name}", class: 'logo logo-dark'
 
-
   .lg-container.flex.flex-col.gap-x-40.gap-y-32.lg:flex-row
     .lhs
-      %h1.text-h1.mb-20
-        Access the most comprehensive eBook library in Tech
+      %h1.text-h1.mb-20= @partner.headline
 
       .c-textual-content.--large
         = raw @partner.description_html
-        - if @partner.support_markdown.present?
-          %hr.c-divider.mt-20.mb-28
+
+      - if @partner.support_markdown.present?
+        %hr.c-divider.mt-24.mb-32
+        .c-textual-content.--large
           %h2.text-h2 How #{@partner.name} supports Exercism
-        %p.text-p-large.mb-40= raw @partner.support_html
+          %p.text-p-large.mb-40= raw @partner.support_html
 
     .rhs
       .border-gradient-lightPurple.border-2.p-20.rounded-8.shadow-smZ1.mb-32
         .text-adaptivePurple.font-semibold.leading-150.flex.items-center.mb-4 Exercism Perk
-        %h2.text-p-xlarge.font-semibold.mb-8= raw strip_tags(@perk.offer_html_for_user(current_user))
-        %p.text-p-base.mb-20= @perk.offer_details
-        = link_to @perk.button_text_for_user(current_user), claim_perk_path(@perk), class: 'btn-m btn-primary'
+        %h2.text-textColor1.text-p-xlarge.font-semibold.mb-8= raw strip_tags(@perk.offer_summary_html_for_user(current_user))
+        %p.text-p-base.mb-20= @perk.offer_details_for_user(current_user)
+        - if @perk.voucher_code?
+          .mb-20= render ReactComponents::Common::CopyToClipboardButton.new(@perk.voucher_code_for_user(current_user))
+        = link_to @perk.button_text_for_user(current_user), claim_perk_path(@perk), class: 'btn-m btn-primary', data: { turbo: false }
 
-      .border-1.border-borderColor8.p-20.rounded-8.shadow-base.bg-backgroundColorA
+      .border-1.border-borderColor8.p-20.rounded-8.shadow-base
         %h2.text-p-xlarge.font-semibold.mb-8 Want to learn more about #{@partner.name}?
-        %p.text-p-base.mb-20 Visit #{@partner.website_domain} to explore how #{@partner.name} can help you.
+        %p.text-p-base.mb-20 Visit #{@partner.website_domain} to learn more and explore how #{@partner.name} can help you.
         = link_to "Visit #{@partner.website_domain}", @partner.website_url, class: 'btn-m btn-default'
 
