--- a/app/views/admin/partners/_form.html.haml
+++ b/app/views/admin/partners/_form.html.haml
@@ -7,10 +7,32 @@
       %ul
         - partner.errors.each do |error|
           %li= error.full_message
-  %div
-    .flex.flex-col.mb-16
-      = f.label :name, class: 'text-h6 mb-4'
-      = f.text_field :name
+
+  .flex.flex-col.mb-16
+    = f.label :name, class: 'text-h6 mb-4'
+    = f.text_field :name
+
+  .flex.flex-col.mb-16
+    = f.label :slug, class: 'text-h6 mb-4'
+    = f.text_field :slug
+
+  .flex.flex-col.mb-16
+    = f.label :website_url, class: 'text-h6 mb-4'
+    = f.text_field :website_url
+
+  .flex.flex-col.mb-16
+    = f.label :headline, "Headline (appears on Perks page)", class: 'text-h6 mb-4'
+    = f.text_field :headline
+
+  .flex.flex-col.mb-16
+    = f.label :description_markdown, "Description (Markdown. Appears on Perks page)", class: 'text-h6 mb-4'
+    = f.text_area :description_markdown, class: 'h-[400px]'
+
+  .flex.flex-col.mb-16
+    = f.label :support_markdown, "Support info (Optional. Markdown. Appears on Perks page)", class: 'text-h6 mb-4'
+    = f.text_area :support_markdown, class: 'h-[200px]'
+
+
 
   %div
     = f.submit class: 'btn btn-primary btn-base'
