--- a/app/views/admin/perks/_form.html.haml
+++ b/app/views/admin/perks/_form.html.haml
@@ -13,21 +13,36 @@
     .c-select
       = f.select :status, (Partner::Perk.statuses.map { |s, _| [s.titleize, s] })
   .flex.flex-col.mb-16
-    = f.label :audience, class: 'text-h6 mb-4'
-    .c-select
-      = f.select :audience, (Partner::Perk.audiences.map { |a, _| [a.titleize, a] })
+    = f.label :preview_text, class: 'text-h6 mb-4'
+    = f.text_field :preview_text
+
+  %h2.text-h2.mb-16 General offer
   .flex.flex-col.mb-16
-    = f.label :url, class: 'text-h6 mb-4'
-    = f.text_field :url
+    = f.label :general_url, "URL", class: 'text-h6 mb-4'
+    = f.text_field :general_url
   .flex.flex-col.mb-16
-    = f.label :about_text, class: 'text-h6 mb-4'
-    = f.text_field :about_text
+    = f.label :general_offer_summary_markdown, "Summary (Markdown)", class: 'text-h6 mb-4'
+    = f.text_field :general_offer_summary_markdown
   .flex.flex-col.mb-16
-    = f.label :offer_markdown, class: 'text-h6 mb-4'
-    = f.text_field :offer_markdown
+    = f.label :general_button_text, "Button Text", class: 'text-h6 mb-4'
+    = f.text_field :general_button_text
   .flex.flex-col.mb-16
-    = f.label :button_text, class: 'text-h6 mb-4'
-    = f.text_field :button_text
+    = f.label :general_offer_details, "Offer details (appears on perk page)", class: 'text-h6 mb-4'
+    = f.text_field :general_offer_details
+
+  %h2.text-h2.mb-16 Premium offer
+  .flex.flex-col.mb-16
+    = f.label :premium_url, "URL", class: 'text-h6 mb-4'
+    = f.text_field :premium_url
+  .flex.flex-col.mb-16
+    = f.label :premium_offer_summary_markdown, "Summary (Markdown)", class: 'text-h6 mb-4'
+    = f.text_field :premium_offer_summary_markdown
+  .flex.flex-col.mb-16
+    = f.label :premium_button_text, "Button Text", class: 'text-h6 mb-4'
+    = f.text_field :premium_button_text
+  .flex.flex-col.mb-16
+    = f.label :premium_offer_details, "Offer details (appears on perk page)", class: 'text-h6 mb-4'
+    = f.text_field :premium_offer_details
 
 %div
   = f.submit class: 'btn btn-primary btn-base'
