--- a/app/views/admin/perks/show.html.haml
+++ b/app/views/admin/perks/show.html.haml
@@ -5,9 +5,20 @@
     %hr.my-32.border-borderColor5
 
     .text-h6.mb-8 Status: #{@perk.status.titleize}
-    .text-h6.mb-8 Audience: #{@perk.audience.titleize}
-    .text-h6.mb-8 URL: #{@perk.url}
     .text-h6.mb-8 Num Clicks: #{@perk.num_clicks}
+    .text-h6.mb-8 Preview Text: #{@perk.preview_text}
+
+    %h2.text-h2.mb-16 General offer
+    .text-h6.mb-8 URL: #{@perk.general_url}
+    .text-h6.mb-8 Offer Summary: #{@perk.general_offer_summary_markdown}
+    .text-h6.mb-8 Button Text: #{@perk.general_button_text}
+    .text-h6.mb-8 Offer Details: #{@perk.general_offer_details}
+
+    %h2.text-h2.mb-16 Premium offer
+    .text-h6.mb-8 URL: #{@perk.premium_url}
+    .text-h6.mb-8 Offer Summary: #{@perk.premium_offer_summary_markdown}
+    .text-h6.mb-8 Button Text: #{@perk.premium_button_text}
+    .text-h6.mb-8 Offer Details: #{@perk.premium_offer_details}
 
     %hr.my-32.border-borderColor5
 
