--- a/app/views/components/perk.html.haml
+++ b/app/views/components/perk.html.haml
@@ -5,11 +5,7 @@
   .details= raw offer_summary_html
   .flex.gap-12
     - if perk.voucher_code?
-      / ARON
-      / Render a button here that opens a modal that looks
-      / the same as what you get if you comment out the line below
-      = link_to button_text, "#", class: 'btn-m btn-primary'
-      /= render ReactComponents::Common::Modal.new('claim_modal', perk: perk, partner: perk.partner)
+      = render ReactComponents::Perks::PerksModalButton.new(text: button_text, perk:, claim_perk_path: claim_perk_path(perk), partner: perk.partner, current_user:)
     - else
       = link_to button_text, claim_perk_path(perk), class: 'btn-m btn-primary', data: { turbo: false }
     = link_to "Learn more", perk_path(perk), class: 'btn-m btn-enhanced'
