Responsive Tracks external pages (#5622)
* Fix issues with overview page

* Dig deeper first pass

* Community solutions

* Update DigDeeper footer

* Wrap checkboxes

* Update top menu's responsiveness

* Rethink stuff

* Dig Deeper tweaks

* Update extra-info on overview

* Scroll exercise-how tabs into view

* Fix scroll on Exercise/index

* Fix syllabus

* Fix breaking exercise page and breaking site-header

* Build page improvements

* Build page enhancements

* More tweaks on Build page

* Add scroll mechanism

* Hide tooltips on build page

* Refine stuff on build page

--- a/app/css/pages/exercise-show.css
+++ b/app/css/pages/exercise-show.css
@@ -15,6 +15,15 @@
     }
 }
 
+body.namespace-tracks,
+body.namespace-.controller-tracks {
+    .auth-buttons {
+        a:nth-child(2) {
+            @apply sm:flex hidden;
+        }
+    }
+}
+
 #page-exercise-show {
     & section.completed-heading {
         @apply flex items-center py-12 px-32 shadow-lg rounded-8 mb-24;
@@ -388,26 +397,22 @@
         }
     }
     & section.extra-info {
-        @apply flex items-center mb-40;
-        & .updated-at,
-        & a {
+        @apply flex flex-row items-center mb-40;
+        a {
+            @apply xs:flex hidden items-center;
             @apply text-15 text-textColor6 font-medium;
-        }
-
-        & a {
-            @apply flex items-center;
             @apply ml-auto;
 
-            & .c-icon {
+            .c-icon {
                 filter: var(--textColor6-filter);
             }
 
-            & .github-icon {
+            .github-icon {
                 height: 22px;
                 width: 22px;
                 @apply mr-16;
             }
-            & .action-icon {
+            .action-icon {
                 height: 12px;
                 width: 12px;
                 @apply ml-12;
