Strip makers from exercise header

--- a/app/views/tracks/_exercise_header.html.haml
+++ b/app/views/tracks/_exercise_header.html.haml
@@ -52,6 +52,5 @@
             .icon
             Hard
 
-
     / TODO: Cache this
-    = render ReactComponents::Track::ExerciseMakersButton.new(exercise)
+    -# = render ReactComponents::Track::ExerciseMakersButton.new(exercise)
