Create Perks and Partners (#3699)
* Create Supporting Orgs table

* Add basic tests, scope

* Add pages, setup correct routing

* Insert data from DB into show file

* Add insiders featured orgs

* Update link in footer

* Dont select everything

* Update app/controllers/about/supporting_organisations_controller.rb

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Update app/views/about/supporter_packt.html.haml

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Remove commented lines

* Use support explanation on index

* Add initial advert and rename supporting-orgs to partners

* Add perks

* Tweaks

* WIP

* Calm down rubocop

* Fix schema

* Log advert impressions

* Log track too

* Add logging and redirecting of clicks

* Add perks commands

* Add CI

* Add to more places

* Use latest gem

* Add more to perks pages

* Responsive tweaks

* Add modal stuff

* Add modal stuff

* Update admin section

* Add React modal to perks

* Update code capsules logos

* Update schema

* Add more tweaks

* Fix factories

* Remove legacy LOC

* Don't render missing adverts

* Strip makers from exercise header

* More test fixes

* Update db/migrate/20230420081308_create_partners.rb

---------

Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>
Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/views/about/partners/packt.html.haml
+++ b/app/views/about/partners/packt.html.haml
@@ -3,7 +3,7 @@
 #page-organisation-supporter
   %header.pb-60
     .md-container.flex.flex-col.items-center.c-shapes.c-shapes-1.text-center
-      = link_to organisation_supporters_about_path, class: "c-prominent-link mt-48 mb-24" do
+      = link_to about_partners_path, class: "c-prominent-link mt-48 mb-24" do
         = graphical_icon "arrow-left"
         See all our supporters
 
@@ -15,7 +15,7 @@
   .md-container
     %article
       .lhs
-        %h2.text-h2 How Packt Publishing supports Exercism
+        %h2.text-h2 #{@org.name} supports Exercism
         %hr.c-divider.mt-20.mb-28
         %p.text-p-xlarge.mb-40 Packt Publishing are a core Exercism partner, helping us develop both the fundraising and content side of the platform. They have sponsored our new Fundraising role, and we are currently developing a deeper partnership which we will launch in early 2022.
 
