Add missing admin fields

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -24,6 +24,7 @@
 @import "./tooltips/student";
 @import "./tooltips/task";
 
+@import "./components/advert";
 @import "./components/perk";
 @import "./components/textblock";
 @import "./components/spinner";
