--- a/app/views/admin/partners/_form.html.haml
+++ b/app/views/admin/partners/_form.html.haml
@@ -10,11 +10,11 @@
 
   .flex.flex-col.mb-16
     = f.label :name, class: 'text-h6 mb-4'
-    = f.text_field :name
+    = f.text_field :name, required: true
 
   .flex.flex-col.mb-16
     = f.label :slug, class: 'text-h6 mb-4'
-    = f.text_field :slug
+    = f.text_field :slug, required: true
 
   .flex.flex-col.mb-16
     = f.label :website_url, class: 'text-h6 mb-4'
@@ -23,6 +23,14 @@
   .flex.flex-col.mb-16
     = f.label :headline, "Headline (appears on Perks page)", class: 'text-h6 mb-4'
     = f.text_field :headline
+
+  .flex.flex-col.mb-16
+    = f.label :light_logo, class: 'text-h6 mb-4'
+    = f.file_field :light_logo
+
+  .flex.flex-col.mb-16
+    = f.label :dark_logo, class: 'text-h6 mb-4'
+    = f.file_field :dark_logo
 
   .flex.flex-col.mb-16
     = f.label :description_markdown, "Description (Markdown. Appears on Perks page)", class: 'text-h6 mb-4'
