--- a/app/views/admin/perks/_form.html.haml
+++ b/app/views/admin/perks/_form.html.haml
@@ -16,6 +16,15 @@
     = f.label :preview_text, class: 'text-h6 mb-4'
     = f.text_field :preview_text
 
+  .flex.flex-col.mb-16
+    = f.label :light_logo, class: 'text-h6 mb-4'
+    = f.file_field :light_logo
+
+  .flex.flex-col.mb-16
+    = f.label :dark_logo, class: 'text-h6 mb-4'
+    = f.file_field :dark_logo
+
+
   %h2.text-h2.mb-16 General offer
   .flex.flex-col.mb-16
     = f.label :general_url, "URL", class: 'text-h6 mb-4'
@@ -29,6 +38,9 @@
   .flex.flex-col.mb-16
     = f.label :general_offer_details, "Offer details (appears on perk page)", class: 'text-h6 mb-4'
     = f.text_field :general_offer_details
+  .flex.flex-col.mb-16
+    = f.label :general_voucher_code, "Voucher Code (optional)", class: 'text-h6 mb-4'
+    = f.text_field :general_voucher_code
 
   %h2.text-h2.mb-16 Premium offer
   .flex.flex-col.mb-16
@@ -43,6 +55,9 @@
   .flex.flex-col.mb-16
     = f.label :premium_offer_details, "Offer details (appears on perk page)", class: 'text-h6 mb-4'
     = f.text_field :premium_offer_details
+  .flex.flex-col.mb-16
+    = f.label :premium_voucher_code, "Voucher Code (optional)", class: 'text-h6 mb-4'
+    = f.text_field :premium_voucher_code
 
 %div
   = f.submit class: 'btn btn-primary btn-base'
