--- a/app/views/community/brief_introductions/index.html.haml
+++ b/app/views/community/brief_introductions/index.html.haml
@@ -1,7 +1,7 @@
 #page-community
   %header
   .lg-container.relative
-    .flex.items-start.pt-40.gap-128.mb-40
+    .flex.lg:flex-row.flex-col.items-start.pt-40.lg:gap-128.gap-64.mb-40
       .block
         = graphical_icon "brief-introductions-gradient", css_class: "h-[48px] w-[48px] mb-8"
         %h1.text-h1.mb-8 The Brief Introduction Series
@@ -11,14 +11,14 @@
         %p.text-p-xlarge.leading-150.mb-8
           Check out his latest video to the right, or explore the full series below.
 
-      .flex-shrink-0{ class: "w-[400px]" }
+      .flex-shrink-0{ class: "lg:w-[400px] w-100" }
         .c-youtube-container
           %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/WQ-Lusoda_8", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
   %hr.border-borderColor6
 
   .lg-container.relative
-    .grid.grid-cols-3.gap-24.pt-40
+    .grid.lg:grid-cols-3.sm:grid-cols-2.grid-cols-1.gap-24.pt-40
       - @ids.each do |id|
         .c-youtube-container
           %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/#{id}", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
