Make Community stories responsive

--- a/app/views/community/interviews/index.html.haml
+++ b/app/views/community/interviews/index.html.haml
@@ -1,7 +1,7 @@
 #page-community
   %header
   .lg-container.relative
-    .flex.items-center.pt-40.gap-128
+    .flex.md:flex-row.flex-col.md:items-center.items-left.pt-40.xl:gap-128.md:gap-64.gap-32
       .block
         = graphical_icon "brief-introductions-gradient", css_class: "h-[48px] w-[48px] mb-8"
         %h1.text-h1.mb-8 Community Interviews &amp; Stories
@@ -12,7 +12,7 @@
           = succeed('!') do
             = link_to "get in touch", "mailto:jonathan@exercism.org", class: 'text-linkColor font-semibold'
 
-      .flex-shrink-0{ class: "w-[400px]" }
+      .flex-shrink-0{ class: "sm:w-[400px] w-100" }
         .border-2.border-gradient-lightPurple.px-16.py-12.rounded-8
           %h3.text-h4.mb-2 Subscribe for more
           %p.text-p-base.mb-8 Don't miss our on future episodes. Subscribe on YouTube and Spotify.
@@ -29,7 +29,7 @@
   .lg-container.relative
     %h2.text-h2.mb-2 Interviews with Language Creators
     %h2.text-p-xlarge.mb-32 Join Jeremy as he speaks to the creators and maintainers of the languages you love.
-    .grid.grid-cols-3.gap-24
+    .grid.lg:grid-cols-3.sm:grid-cols-2.grid-cols-1.gap-24
       - @language_creator_ids.each do |id|
         .c-youtube-container
           %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/#{id}", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
@@ -39,7 +39,7 @@
   .lg-container.relative
     %h2.text-h2.mb-2 Community Stories
     %h2.text-p-xlarge.mb-20 Join Jonathan as he chats to our community, exploring their stories and journeys as programmers.
-    .grid.grid-cols-3.gap-24
+    .grid.lg:grid-cols-3.sm:grid-cols-2.grid-cols-1.gap-24
       - @stories.each do |community_story|
         = link_to community_story_path(community_story), class: 'flex flex-col shadow-sm p-16 bg-backgroundColorA rounded-8' do
           = image_tag community_story.thumbnail_url, class: "bg-borderLight rounded-8 mb-12 w-[100%]", width: 243, height: 136
