--- a/app/views/components/advert.html.haml
+++ b/app/views/components/advert.html.haml
@@ -1,6 +1,7 @@
-= link_to redirect_advert_path(advert, impression_uuid: uuid), class: 'w-[240px] bg-backgroundColorA border-1 border-borderColor5 py-8 px-12 rounded-8 text-center flex flex-col items-center leading-130 text-14 shadow-sm hover:shadow-smZ1' do
+= link_to redirect_advert_path(advert, impression_uuid: uuid), class: 'c-advert w-[240px] bg-backgroundColorA border-1 border-borderColor5 py-8 px-12 rounded-8 text-center flex flex-col items-center leading-130 text-14 shadow-sm hover:shadow-smZ1' do
   .font-semibold.mb-4.text-13 Exercism is supported by
-  = image_tag advert.light_logo.presence || advert.partner.light_logo, class: 'h-[22px] mb-12'
+  = image_tag (advert.light_logo.presence || advert.partner.light_logo || 'blank.png'), class: 'logo-light h-[22px] mb-12'
+  = image_tag (advert.dark_logo.presence || advert.partner.dark_logo || 'blank.png'), class: 'logo-dark h-[22px] mb-12'
   .text-14
     = advert.base_text
     %span.font-medium= raw advert.emphasised_text
