--- a/app/views/components/perk.html.haml
+++ b/app/views/components/perk.html.haml
@@ -5,7 +5,7 @@
   .details= raw offer_summary_html
   .flex.gap-12
     - if perk.voucher_code?
-      = render ReactComponents::Perks::PerksModalButton.new(text: button_text, perk:, claim_perk_path: claim_perk_path(perk), partner: perk.partner, current_user:)
+      = render ReactComponents::Perks::PerksModalButton.new(perk)
     - else
       = link_to button_text, claim_perk_path(perk), class: 'btn-m btn-primary', data: { turbo: false }
     = link_to "Learn more", perk_path(perk), class: 'btn-m btn-enhanced'
