Community base improvements

--- a/app/css/components/single-select.css
+++ b/app/css/components/single-select.css
@@ -41,7 +41,7 @@
         & > .action-icon {
             height: 16px;
             width: 16px;
-            @apply ml-24 mr-0;
+            @apply xs:ml-24 ml-0 mr-0;
             filter: var(--textColor2-filter);
         }
     }
