--- a/app/views/components/perk.html.haml
+++ b/app/views/components/perk.html.haml
@@ -4,7 +4,9 @@
   %p.about= perk.preview_text
   .details= raw offer_summary_html
   .flex.gap-12
-    - if perk.voucher_code?
+    - if !user_signed_in?
+      = render ReactComponents::Perks::PerksExternalModalButton.new(perk)
+    - elsif perk.voucher_code?
       = render ReactComponents::Perks::PerksModalButton.new(perk)
     - else
       = link_to button_text, claim_perk_path(perk), class: 'btn-m btn-primary', data: { turbo: false }
