--- a/app/views/perks/show.html.haml
+++ b/app/views/perks/show.html.haml
@@ -26,9 +26,12 @@
         .text-adaptivePurple.font-semibold.leading-150.flex.items-center.mb-4 Exercism Perk
         %h2.text-textColor1.text-p-xlarge.font-semibold.mb-8= raw strip_tags(@perk.offer_summary_html_for_user(current_user))
         %p.text-p-base.mb-20= @perk.offer_details_for_user(current_user)
-        - if @perk.voucher_code?
-          .mb-20= render ReactComponents::Common::CopyToClipboardButton.new(@perk.voucher_code_for_user(current_user))
-        = link_to @perk.button_text_for_user(current_user), claim_perk_path(@perk), class: 'btn-m btn-primary', data: { turbo: false }
+        - if !user_signed_in?
+          = render ReactComponents::Perks::PerksExternalModalButton.new(@perk)
+        - else
+          - if @perk.voucher_code?
+            .mb-20= render ReactComponents::Common::CopyToClipboardButton.new(@perk.voucher_code_for_user(current_user))
+          = link_to @perk.button_text_for_user(current_user), claim_perk_path(@perk), class: 'btn-m btn-primary', data: { turbo: false }
 
       .border-1.border-borderColor8.p-20.rounded-8.shadow-base
         %h2.text-p-xlarge.font-semibold.mb-8 Want to learn more about #{@partner.name}?
