Responsive Community Videos (#5655)
* Fix Upcoming streaming schedule

* Responsive video-grid

* Safety fallback for results-zone className

* Add ml to TrackFilterList

* Responsive Community Page (#5669)

* Responsive tweaks

* Community base improvements

* Change font size on modals

--- a/app/views/community/videos/index.html.haml
+++ b/app/views/community/videos/index.html.haml
@@ -1,8 +1,8 @@
 #page-community-videos
   .lg-container
-    .flex.pt-32
-      .flex-grow.mr-64
+    .flex.pt-32.xl:gap-64.lg:gap-32.gap-64.lg:flex-row.flex-col
+      .flex-grow
         = render ReactComponents::Community::VideoGrid.new(params, items_per_row: 3)
-      .flex-shrink-0.pt-8{ class: 'w-[380px]' }
+      .flex-shrink-0.pt-8{ class: 'max-w-[380px]' }
         = render "rhs", live_event: @live_event, featured_event: @featured_event, scheduled_events: @scheduled_events
 
