Hide tags under `md`, fix colors/filters

--- a/app/css/tooltips/task.css
+++ b/app/css/tooltips/task.css
@@ -25,6 +25,10 @@
             @apply mr-24;
             width: 45px;
 
+            .c-icon {
+                @apply filter-textColor6;
+            }
+
             & .action-icon {
                 @apply border-none;
                 .c-icon {
