Add two seperate cache keys for num_testimonials

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -15,7 +15,7 @@
         %header.section-header
           = graphical_icon :'community-solutions', hex: true
           %h2 Published Solutions
-          .total-count= @num_total_solutions
+          .total-count= @user.num_published_solutions
           %hr.c-divider
 
         .solutions
