First working iteration
Adjust tests, update TS, add return links, refactor, etc

Sort out setup_future_usage issue

Remove unused bits, tailor other bits

Add appearance obj

Add different theme objects

DRY

Use card element for subscriptions, refactor things

Fix a wrong type

Update import

Adjust tests

Fix things, and paths

Fix footer form anomaly

Improve TS on application.tsx

Add stripe version to footer cache key

Fix test

Force dark colors on premium and insiders

Refactor things, make card element options adaptive

Format utils better

Pass amount from backend

Delete unused component

Lazy load stripe.js (#5843)

Add styling for load error and loading

Tweak margins

Fix the world (#5861)

* Fix the world

* Tidy up, optimise ExercismStripeElements

* Tidy up StripeForm

* add off_session on Stripe::Subscription.create

* Refactor Form, useStripeForm

* Leave things at a simple, working state

* Fix tests

* One more fix

---------

Co-authored-by: dem4ron <demaaron88@gmail.com>

Fix bad rebase

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -35,6 +35,7 @@
 @import "./components/social-icon";
 @import "./components/blog-post";
 @import "./components/donations-form";
+@import "./components/donation-card-error";
 @import "./components/toast";
 @import "./components/contributions-summary";
 @import "./components/progress";
